Bug fix: On Mac OS X, extension preferences dialog is cut off at the bottom when at the General pref pane (issue #68)

--- a/src/chrome/skin/mac/options.css
+++ b/src/chrome/skin/mac/options.css
@@ -36,7 +36,7 @@ prefwindow > .paneDeckContainer {
 }
 
 prefwindow[animated="true"] #pane-general {
-  height: 28em;
+  height: 29em;
 }
 
 prefwindow[animated="true"] #pane-datasource {
